# fastapi_template

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_sessions.py
alembic/: env.py
alembic/versions/: 3d1fe30b4fb5_init.py  6129c613d266_initial_migration.py  7880e132ecca_add_session_and_location_tables.py  8bc617db9f53_.py  9afea5c9a0eb_add_authentication_and_user_id_to_.py  bac2d7ef12ca_finalized_template.py
src/: app.py
src/config/: app_config.py
src/core/: cookies.py  error_handlers.py  exceptions.py  logger.py  middleware.py  query_params.py  rate_limit.py  responses.py  scripts.py  security.py
src/database/: db.py
src/database/schema/: __init__.py  user_schema.py
src/models/: user.py
src/routing/: user.py
src/sessions/controllers/: session_controller.py
src/sessions/models/: session.py
src/sessions/repositories/: session_repo.py
src/sessions/schemas/: session_schema.py
src/sessions/services/: session_service.py
src/users/controllers/: user_controller.py
src/users/models/: user.py
src/users/repositories/: user_repo.py
src/users/schemas/: auth_schema.py  user_schema.py
src/users/services/: user_service.py
travel_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
